# SudokoGenerator

./: CMakeLists.txt  README.md  main.cpp
builders/: CMakeLists.txt
builders/includes/: BuilderBase.h  BuilderBitMaps.h  BuilderDancingLinks.h  Logic.h
builders/src/: BuilderBase.cpp  BuilderBitMaps.cpp  BuilderDancingLinks.cpp  Logic.cpp
includes/: Builder.h  BuilderBitMaps.h  BuilderCrossHashing.h  Grid.h  Logic.h  Printer.h  Util.h
src/: Builder.cpp  BuilderBitMaps.cpp  BuilderCrossHashing.cpp  Grid.cpp  Logic.cpp  Printer.cpp
structures/: CMakeLists.txt
structures/includes/: DancingLinks.h  DancingLinksGrid.h  Grid.h  Printer.h
structures/src/: DancingLinks.cpp  DancingLinksGrid.cpp  Grid.cpp  Printer.cpp
test/: CMakeLists.txt  main.cpp
test/includes/: Grid_test.h
test/src/: DancingLinkGrid_test.cpp  DancingLinksGrid_test.cpp  Grid_test.cpp  Util_test.cpp  util_test.cpp
util/: CMakeLists.txt
util/includes/: Types.h
util/src/: Util.cpp
